k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: demo
labels:
  app: web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: docker.io/fauxapokolips/devops-k8s-app:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits:   { cpu: "250m", memory: "256Mi" }
          readinessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 6
          livenessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
